Fix layout issue for Chinese support by adding a 100vw to the body

--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,28 @@
     box-shadow: 0 0 0.5rem 0.5rem rgb(0, 255, 0);
   }
 }
+@keyframes frExpandGlow {
+  0% {
+    box-shadow: 0 0 0.25rem 0.25rem rgb(0, 0, 255);
+  }
+  50% {
+    box-shadow: 0 0 0.75rem 0.75rem rgb(0, 0, 255);
+  }
+  100% {
+    box-shadow: 0 0 0.5rem 0.5rem rgb(0, 0, 255);
+  }
+}
+@keyframes zhExpandGlow {
+  0% {
+    box-shadow: 0 0 0.25rem 0.25rem rgb(255, 0, 0);
+  }
+  50% {
+    box-shadow: 0 0 0.75rem 0.75rem rgb(255, 0, 0);
+  }
+  100% {
+    box-shadow: 0 0 0.5rem 0.5rem rgb(255, 0, 0);
+  }
+}
 @keyframes mobileSlideIn {
   0% {
     transform: translateX(-500vw);
@@ -456,7 +478,7 @@ body#BurkinaFaso header {
   }
 }
 
-#projectsGrid article:hover {
+.expand-glow:hover {
   animation: expandGlow 0.2s forwards;
 }
 
@@ -520,6 +542,7 @@ body#BurkinaFaso header {
 }
 
 #intro {
+  width: 100vw;
   height: 100vh;
   justify-content: center;
   align-items: center;
@@ -1010,6 +1033,9 @@ body#index[data-lang=fr] #introInfo {
 body#index[data-lang=fr] #langSelect:hover {
   box-shadow: 0 0 0.25rem 0.25rem rgb(0, 0, 255);
 }
+body#index[data-lang=fr] #mobileHeader {
+  background-color: rgb(20, 0, 0);
+}
 @media (min-width: 769px) {
   body#index[data-lang=fr] #mobileHeader {
     box-shadow: none;
@@ -1039,6 +1065,9 @@ body#index[data-lang=fr] .txt-glow {
     animation: frMobileGlow 1s ease-in-out infinite alternate;
   }
 }
+body#index[data-lang=fr] .expand-glow:hover {
+  animation: frExpandGlow 0.2s forwards;
+}
 body#index[data-lang=fr] .course {
   text-shadow: 0 0 0.55rem rgb(0, 0, 255);
   background-color: rgb(20, 0, 0);
@@ -1054,11 +1083,17 @@ body#index[data-lang=zh] {
   background-size: cover;
   color: rgb(20, 20, 0);
 }
+body#index[data-lang=zh] #introName {
+  letter-spacing: 1.25rem;
+}
 body#index[data-lang=zh] #introInfo {
   color: rgb(255, 255, 235);
 }
 body#index[data-lang=zh] #langSelect:hover {
   box-shadow: 0 0 0.25rem 0.25rem rgb(255, 0, 0);
+}
+body#index[data-lang=zh] #mobileHeader {
+  background-color: rgb(20, 20, 0);
 }
 @media (min-width: 769px) {
   body#index[data-lang=zh] #mobileHeader {
@@ -1091,6 +1126,9 @@ body#index[data-lang=zh] .txt-glow {
   body#index[data-lang=zh] .mobile-glow {
     animation: zhMobileGlow 1s ease-in-out infinite alternate;
   }
+}
+body#index[data-lang=zh] .expand-glow:hover {
+  animation: zhExpandGlow 0.2s forwards;
 }
 body#index[data-lang=zh] .course {
   text-shadow: 0 0 0.55rem rgb(255, 0, 0);
