--- a/sass/layouts/_body.scss
+++ b/sass/layouts/_body.scss
@@ -182,7 +182,7 @@ body#BurkinaFaso header {
     }
 }
 
-#projectsGrid article:hover {
+.expand-glow:hover {
     animation: expandGlow 0.2s forwards;
 }
 
