--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -1,4 +1,5 @@
 #intro {
+    width: 100vw;
     height: 100vh;
     justify-content: center;
     align-items: center;
